--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PixiJS Game</title>
+
+
+    <style>
+        @font-face {
+            font-family: 'PressStart2P-Regular';
+            src: url('../Programacion_de_vieojuegos_1_tp/src/sprites/font/PressStart2P-Regular.ttf');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        * {
+            font-family: fuente;
+            user-select: none;
+            margin: 0;
+        }
+
+        body,
+        html {
+            overflow: hidden;
+        }
+    </style>
 </head>
+
 <body>
     <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
