--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <script src="https://pixijs.download/v6.5.8/pixi.min.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 
